# SimpleElastix

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  NOTICE  README.md  Readme.md  SimpleITKConfig.cmake.in  UseSimpleITK.cmake.in  azure-pipelines.yml  conf.py  index.rst  simpleitk_common.cmake
.github/workflows/: Build.yml  BuildPython38.yml  BuildPython39.yml  SuperBuild.yml
CI/Azure/: azure-pipelines-build.yml  azure-pipelines.yml
CMake/: sitkAddTest.cmake  sitkCheckRequiredFlags.cmake  sitkCompilerWarningsSettings.cmake  sitkProjectLanguageCommon.cmake  sitkTargetLinkLibrariesWithDynamicLookup.cmake
Code/: CMakeLists.txt
Code/BasicFilters/include/: sitkCastImageFilter.h
Code/BasicFilters/json/: MorphologicalWatershedImageFilter.json  N4BiasFieldCorrectionImageFilter.json  RegionalMinimaImageFilter.json  SaltAndPepperNoiseImageFilter.json  ShotNoiseImageFilter.json  SliceImageFilter.json  SpeckleNoiseImageFilter.json  UnaryMinusImageFilter.json  ZeroCrossingBasedEdgeDetectionImageFilter.json
Code/BasicFilters/src/: CMakeLists.txt  sitkCastImageFilter-2.cxx  sitkCastImageFilter-2l.cxx  sitkCastImageFilter-3.cxx  sitkCastImageFilter-3l.cxx  sitkCastImageFilter-3v.cxx  sitkCastImageFilter-4.cxx  sitkCastImageFilter-4l.cxx  sitkCastImageFilter-4v.cxx  sitkCastImageFilter.cxx  sitkCreateInterpolator.hxx
Code/Common/include/: SimpleITK.h  sitkCommon.h  sitkDualMemberFunctionFactory.hxx  sitkPixelIDTypeLists.h  sitkPixelIDValues.h
Code/Common/src/: sitkBSplineTransform.cxx  sitkPixelIDValues.cxx
Code/Elastix/: CMakeLists.txt
Code/Elastix/include/: selxParameterMapInterface.h  selxSimpleElastix.h  selxSimpleTransformix.h  sitkElastixImageFilter.h  sitkSimpleElastix.h  sitkSimpleElastix.hxx  sitkSimpleTransformix.h  sitkSimpleTransformix.hxx  sitkTransformixImageFilter.h
Code/Elastix/src/: CMakeLists.txt  selxParameterMapInterface.cxx  selxSimpleElastix.cxx  selxSimpleElastix.hxx  selxSimpleTransformix.cxx  selxSimpleTransformix.hxx  sitkElastixImageFilter.cxx  sitkElastixImageFilterImpl.cxx  sitkElastixImageFilterImpl.h  sitkSimpleElastix.cxx  sitkSimpleElastix.hxx  sitkSimpleElastixImpl.cxx  sitkSimpleElastixImpl.h  sitkSimpleTransformix.cxx  sitkSimpleTransformix.hxx  sitkSimpleTransformixImpl.cxx  sitkSimpleTransformixImpl.h  sitkTransformixImageFilter.cxx  sitkTransformixImageFilterImpl.cxx  sitkTransformixImageFilterImpl.h
Code/Explicit/src/: sitkExplicitITKImageRegion.cxx
Code/IO/include/: sitkImageFileWriter.h  sitkImageSeriesReader.h
Code/IO/src/: sitkImageFileReader.cxx  sitkImageFileWriter.cxx  sitkImageReaderBase.cxx  sitkImageSeriesReader.cxx  sitkImageSeriesWriter.cxx  sitkImportImageFilter.cxx  sitkShow.cxx
Documentation/: Makefile  README.md  make.bat
Documentation/Doxygen/: Developer.dox  FilterTemplates.dox  GitPhilosopy.dox  MainPage.dox  PythonDownloads.dox
Documentation/Sphinx/: Acknowledgements.rst  AffineRegistration.rst  AtlasBasedSegmentation.rst  GettingStarted.rst  GroupwiseRegistration.rst  HelloWorld.rst  Introduction.rst  LabelBasedRegistration.rst  MultiMetricRegularisation.rst  NonRigidRegistration.rst  ParameterMaps.rst  PointBasedRegistration.rst  RegisterDICOMs.rst  RigidRegistration.rst  conf.py  index.rst
Documentation/docs/source/: conventions.rst  filters.rst
Documentation/source/: Acknowledgements.rst  AffineRegistration.rst  GetDeformationField.rst  GettingStarted.rst  GroupwiseRegistration.rst  HelloWorld.rst  Introduction.rst  KnownIssues.rst  NonRigidRegistration.rst  ObjectOrientedInterface.rst  ParameterMaps.rst  PointBasedRegistration.rst  RegistrationComponents.rst  RigidRegistration.rst  conf.py  index.rst  test.rst
Examples/: CMakeLists.txt  ElastixFilter.cxx  SimpleElastix.cs  SimpleElastix.cxx  SimpleElastix.java  SimpleElastix.py  SimpleElastix1.cxx  SimpleTransformix.cs  SimpleTransformix.cxx  SimpleTransformix.java  SimpleTransformix.py  SimpleTransformix1.cxx  tfx.cxx
Examples/CSharp/: SimpleElastix.cs  SimpleTransformix.cs
Examples/ITKIntegration/: CMakeLists.txt  ElastixFilter.cxx  TransformixFilter.cxx
Examples/ImageIOSelection/: ImageIOSelection.py
Examples/Java/: SimpleElastix.java  SimpleTransformix.java
Examples/Python/: SimpleElastix.py  SimpleTransformix.py
Examples/R/: SimpleElastix.R
Examples/SimpleElastix/: CMakeLists.txt  Example1.cxx  SimpleElastix.cs  SimpleElastix.cxx  SimpleElastix.java  SimpleElastix.py  SimpleTransformix.cs  SimpleTransformix.cxx  SimpleTransformix.java  SimpleTransformix.py
SuperBuild/: CMakeLists.txt  External_Elastix.cmake  External_ITK.cmake  External_Lua.cmake  External_SimpleElastixExamples  External_SimpleITKExamples.cmake  SuperBuild.cmake
Testing/CI/Azure/: azure-pipelines-package.yml  azure-pipelines.yml  azure.cmake  ci.yml
Testing/Unit/: CMakeLists.txt  selxSimpleElastixTest.py  simpleelastix.py  simpletransformix.py  sitkElastixFilterTests.cxx  sitkElastixImageFilterTests.cxx  sitkImage4DTests.cxx  sitkParameterMapTests.cxx  sitkSimpleElastix4DTests.cxx  sitkSimpleElastixTests.cxx  sitkSimpleTransformixTests.cxx  sitkTransformTests.cxx  sitkTransformixFilterTests.cxx  sitkTransformixImageFilterTests.cxx
Testing/Unit/Python/: ActiveRegistrationModel.py  CMakeLists.txt  sitkTransformixImageFilterTest.py
Utilities/: CMakeLists.txt  pypi.sh.in
Utilities/Distribution/manylinux/imagefiles/: cmd.sh
Utilities/GenerateDocs/: doxy2swig.py
Utilities/SimpleElastix/: CMakeLists.txt  valgrind.sh.in
Wrapping/: CMakeLists.txt  SimpleITK.i
Wrapping/Common/: SimpleITK_Common.i
Wrapping/Java/: JavaDoc.i
Wrapping/Python/: PythonDocstrings.i  PythonVirtualEnvInstall.cmake.in
Wrapping/Python/Packaging/: setup.py.in
